0032366: Visualization, SelectMgr_ViewerSelector3d::ToPixMap() - add option dumping surface normals

- extended functionality to dump surface normals
- added new option to vseldump command
- added tests